03-gitops/apps/03-personal/tracktor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracktor
  namespace: personal
  labels:
    app: tracktor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracktor
  template:
    metadata:
      labels:
        app: tracktor
    spec:
      containers:
        - name: tracktor
          image: ghcr.io/javedh-dev/tracktor:latest
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tracktor-data
