03-gitops/apps/03-personal/tracktor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracktor
  namespace: personal
spec:
  selector:
    app: tracktor
  ports:
    - name: http
      port: 3000
      targetPort: 3000
